--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Passionate about <strong>technology</strong>, I strive to contribute to a <strong>positive change</strong> by creating and developing <strong>solutions</strong> that make everyday life easier and more sustainable. I believe that technology should serve people, not just by solving problems, but by empowering individuals and opening up new opportunities for growth and connection.</p>
+        <p style="text-align: justify;">Passionate about <strong>technology</strong>, I strive to contribute to a <strong>positive change</strong> by creating and developing <strong>solutions</strong> that make everyday life easier and more sustainable. I believe that technology should serve people, not just by solving problems, but by empowering individuals and opening up new opportunities for growth and connection.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -818,7 +818,7 @@
                 </div>
               </a>
             </div>
-                        
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
               <a href="socialforcemodel_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
