--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <div class="social-links text-center">
       <a href="#contact" class="phone"><i class="bi bi-telephone"></i></a>
+      <a href="#contact" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
       <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
       <a href="#contact" class="linkedin"><i class="bi bi-linkedin"></i></a>
       <a href="#contact" class="github"><i class="bi bi-github"></i></a>
@@ -63,7 +64,7 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="#portfolio"><i class="bi bi-diagram-3 navicon"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -75,9 +76,9 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/img_luzern.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/img_port1.jpg" alt="" data-aos="fade-in" class="">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100" style="margin-top: -185px;">
+      <div class="container" data-aos="fade-up" data-aos-delay="100" style="margin-top: -340px; ">
         <h2>Marc Arias</h2>
         <p>I'm <span class="typed" data-typed-items="a Thinker, an Explorer, a Developer, an Engineer, a Changemaker, a Futurist"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
@@ -900,6 +901,14 @@
                 <div>
                   <h3 style="margin: 0;">Phone</h3>
                   <p style="margin: 0;">+41 77 262 55 72</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="info-item d-flex align-items-center mb-4" data-aos="fade-up" data-aos-delay="300" style="padding: 5px;">
+                <i class="bi bi-whatsapp flex-shrink-0" style="margin-left: 25px; margin-right: 15px;"></i>
+                <div>
+                  <h3 style="margin: 0;">WhatsApp</h3>
+                  <p style="margin: 0;">+34 686 091 915</p>
                 </div>
               </div><!-- End Info Item -->
 
